--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                                 BLOG
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="blog.html">Blog Fullwidth</a></li>
+                                <li><a class="dropdown-item" href="#">Blog Fullwidth</a></li>
                                 <li><a class="dropdown-item" href="#">Blog Sidebar</a></li>
-                                <li><a class="dropdown-item" href="#">Blog Masonry</a></li>
+                                <li><a class="dropdown-item" href="blog.html">Blog Masonry</a></li>
                                 <li><a class="dropdown-item" href="#">Blog Detail</a></li>
                             </ul>
                         </li>
