--- a/shop.html
+++ b/shop.html
@@ -103,11 +103,12 @@
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           BLOG
                         </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="blog.html">Blog Fullwidth</a></li>
-                          <li><a class="dropdown-item" href="#">Blog </a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Blog Fullwidth</a></li>
+                                <li><a class="dropdown-item" href="#">Blog Sidebar</a></li>
+                                <li><a class="dropdown-item" href="blog.html">Blog Masonry</a></li>
+                                <li><a class="dropdown-item" href="#">Blog Detail</a></li>
+                            </ul>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
