--- a/index.html
+++ b/index.html
@@ -672,7 +672,6 @@
         </section>
 
         <section class="media">
-            <img src="images/arrowup.png">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
@@ -698,6 +697,10 @@
             </div>
         </section>
     </footer>
+    
+        <a href="#home" class="top">
+        <img src="images/arrowup.png" alt="">
+    </a>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/custom.js"></script>
