--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,6 @@
         </section>
 
         <section class="media">
-            <img src="images/arrowup.png">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
@@ -338,6 +337,11 @@
             </div>
         </section>
     </footer>
+    
+        <a href="#home" class="top">
+        <img src="images/arrowup.png" alt="">
+    </a>
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
