--- a/shop.html
+++ b/shop.html
@@ -891,7 +891,6 @@
       </section>
 
       <section class="media">
-          <img src="images/arrowup.png">
           <div class="container">
               <div class="row">
                   <div class="col-lg-4 col-md-4 col-sm-12">
@@ -917,6 +916,10 @@
           </div>
       </section>
   </footer>
+
+    <a href="#home" class="top">
+        <img src="images/arrowup.png" alt="">
+    </a>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/custom.js"></script>
