--- a/t-shirt.html
+++ b/t-shirt.html
@@ -433,7 +433,6 @@
         </section>
 
         <section class="media">
-            <img src="images/arrowup.png">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
@@ -459,6 +458,10 @@
             </div>
         </section>
     </footer>
+        
+            <a href="#home" class="top">
+        <img src="images/arrowup.png" alt="">
+    </a>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/custom.js"></script>
